fix alignment for friends index page

--- a/public/stylesheets/profiles/index.css
+++ b/public/stylesheets/profiles/index.css
@@ -2,6 +2,7 @@ main{
   display: flex;
   flex-direction: row;
   justify-content: center;
+
 }
 .container{
   display: flex;
@@ -17,7 +18,7 @@ main{
 .profile-card{
   display: flex;
   flex-direction: column;
-  border: 2px solid #464937;
+  border: 2px solid #e76f5a;
   border-radius: 10px;
   padding: 10px;
   margin: 25px;
